--- a/src/assets/scss/components/layout/_breakpoint.scss
+++ b/src/assets/scss/components/layout/_breakpoint.scss
@@ -4,7 +4,7 @@
 //
 //    (xs: 0, sm: 576px, md: 768px)
 //
-// The map defined in the `$grid-breakpoints` global variable is used as the `$breakpoints` argument by default.
+// The map defined in the `$grid-breakpoints` global variable is used as the `$breakpoints` argument by overview.
 
 // Name of the next breakpoint, or null for the last breakpoint.
 //
