--- a/src/assets/scss/demo/_highlight.scss
+++ b/src/assets/scss/demo/_highlight.scss
@@ -1,5 +1,5 @@
 /**
-* prism.js default theme for JavaScript, CSS and HTML
+* prism.js overview theme for JavaScript, CSS and HTML
 * Based on dabblet (http://dabblet.com)
 * @author Lea Verou
 */
@@ -16,7 +16,7 @@ pre code {
     border: 1px solid #e9e9e9;
     border-radius: $border-radius;
   }
-  
+
   code[class*='language-'],
   pre[class*='language-'] {
     color: black;
@@ -37,7 +37,7 @@ pre code {
     hyphens: none;
     background: none;
   }
-  
+
   pre[class*='language-']::-moz-selection,
   pre[class*='language-'] ::-moz-selection,
   code[class*='language-']::-moz-selection,
@@ -45,7 +45,7 @@ pre code {
     text-shadow: none;
     background: #b3d4fc;
   }
-  
+
   pre[class*='language-']::selection,
   pre[class*='language-'] ::selection,
   code[class*='language-']::selection,
@@ -53,48 +53,48 @@ pre code {
     text-shadow: none;
     background: #b3d4fc;
   }
-  
+
   @media print {
     code[class*='language-'],
     pre[class*='language-'] {
       text-shadow: none;
     }
   }
-  
+
   /* Code blocks */
   pre[class*='language-'] {
     margin: 16px 0;
     padding: 12px 20px;
     overflow: auto;
   }
-  
+
   :not(pre) > code[class*='language-'],
   pre[class*='language-'] {
     background: #f5f5f5;
   }
-  
+
   /* Inline code */
   :not(pre) > code[class*='language-'] {
     padding: 0.1em;
     white-space: normal;
     border-radius: 0.3em;
   }
-  
+
   .token.comment,
   .token.prolog,
   .token.doctype,
   .token.cdata {
     color: slategray;
   }
-  
+
   .token.punctuation {
     color: #999;
   }
-  
+
   .namespace {
     opacity: 0.7;
   }
-  
+
   .token.property,
   .token.tag,
   .token.boolean,
@@ -104,7 +104,7 @@ pre code {
   .token.deleted {
     color: #f81d22;
   }
-  
+
   .token.selector,
   .token.attr-name,
   .token.string,
@@ -113,7 +113,7 @@ pre code {
   .token.inserted {
     color: #0b8235;
   }
-  
+
   .token.operator,
   .token.entity,
   .token.url,
@@ -121,23 +121,23 @@ pre code {
   .style .token.string {
     color: #0b8235;
   }
-  
+
   .token.atrule,
   .token.attr-value,
   .token.keyword {
     color: #008dff;
   }
-  
+
   .token.function {
     color: #f81d22;
   }
-  
+
   .token.regex,
   .token.important,
   .token.variable {
     color: #e90;
   }
-  
+
   .token.important,
   .token.bold {
     font-weight: bold;
@@ -145,8 +145,7 @@ pre code {
   .token.italic {
     font-style: italic;
   }
-  
+
   .token.entity {
     cursor: help;
   }
-  
