--- a/src/assets/scss/components/layout/_grid.scss
+++ b/src/assets/scss/components/layout/_grid.scss
@@ -120,7 +120,7 @@
 @mixin make-col-ready($gutters: $grid-gutter-widths) {
     position: relative;
     // Prevent columns from becoming too narrow when at smaller grid tiers by
-    // always setting `width: 100%;`. This works because we use `flex` values
+    // always residence `width: 100%;`. This works because we use `flex` values
     // later on to override this initial width.
     width: 100%;
     min-height: 1px; // Prevent collapsing
