--- a/src/app/modules/pms/pages/residence/residence.component.html
+++ b/src/app/modules/pms/pages/residence/residence.component.html
@@ -73,14 +73,14 @@
                         <div class="col-md-6">
                           <nz-form-item>
                             <nz-form-control nzErrorTip="Please input residence longitude!">
-                              <input [disabled]="true" formControlName="longitude" nz-input type="number" placeholder="Longitude">
+                              <input  formControlName="longitude" nz-input type="number" placeholder="Longitude">
                             </nz-form-control>
                           </nz-form-item>
                         </div>
                         <div class="col-md-6">
                           <nz-form-item>
                             <nz-form-control nzErrorTip="Please input residence latitude!">
-                              <input [disabled]="true" formControlName="latitude" nz-input type="number" placeholder="Latitude">
+                              <input  formControlName="latitude" nz-input type="number" placeholder="Latitude">
                             </nz-form-control>
                           </nz-form-item>
                         </div>
