--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -17,6 +17,7 @@ $magenta:                   #eb2f96 !default;
 $volcano:                   #fa541c !default;
 $lime:                      #a0d911 !default;
 $geekblue:                  #2f54eb !default;
+$custom-ornage:             #fa9620 !default;
 
 
 // Create grayscale
@@ -76,7 +77,7 @@ $tone-loop: (
 );
 
 // State Colors
-$brand-primary:             $blue !default;
+$brand-primary:             $custom-ornage !default;
 $brand-secondary:           $purple !default;
 $brand-success:             $cyan !default;
 $brand-info:                $blue !default;
