--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -77,7 +77,7 @@ $tone-loop: (
 );
 
 // State Colors
-$brand-primary:             $custom-ornage !default;
+$brand-primary:             $blue !default;
 $brand-secondary:           $purple !default;
 $brand-success:             $cyan !default;
 $brand-info:                $blue !default;
